--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,10 +1,16 @@
 # encoding=utf-8
 GCodeFX.title = GCodeFX
 
-GCodeFXController.clickMeButton = _Hello
-GCodeFXController.helloText = Hello!
-GCodeFXController.goodbyeText = Goodbye
+helloText = Hello!
+goodbyeText = Goodbye
 
 Dialog.information.header=Information
 
 GCodeFXController.dialog.information.contentText = This is GCodeFX!
+
+
+
+GCodeCanvasPresenter.gotoSettings = Settings
+
+GCodeSettingsPresenter.gotoCanvas = Canvas
+
