--- a/src/main/resources/messages/messages_be_BY.properties
+++ b/src/main/resources/messages/messages_be_BY.properties
@@ -1,10 +1,13 @@
 # encoding=utf-8
 GCodeFX.title = GCodeFX
 
-GCodeFXController.clickMeButton = Націсні мяне
-GCodeFXController.helloText = Прывітанне!
-GCodeFXController.goodbyeText = Да пабачэння!
+helloText = Прывітанне!
+goodbyeText = Да пабачэння!
 
 #Dialog.information.header=Дыялогавае акно
 Dialog.information.header=Information
 GCodeFXController.dialog.information.contentText = This is GCodeFX!
+
+GCodeCanvasPresenter.gotoSettings = Settings
+
+GCodeSettingsPresenter.gotoCanvas = Canvas
