--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -1,11 +1,13 @@
 # encoding=utf-8
 GCodeFX.title = GCodeFX
 
-GCodeFXController.clickMeButton = Нажми меня
-
-GCodeFXController.helloText = Привет!
-GCodeFXController.goodbyeText = До свидания!
+helloText = Привет!
+goodbyeText = До свидания!
 
 #Dialog.information.header=Диалоговое окно
 Dialog.information.header=Information
 GCodeFXController.dialog.information.contentText = This is GCodeFX!
+
+GCodeCanvasPresenter.gotoSettings = Settings
+
+GCodeSettingsPresenter.gotoCanvas = Canvas
